# skjack-vcv

./: ChangeLog  LICENSE.txt  Makefile  README.md  README.org  meson.build  plugin.json
doc/: guide.odg
src/: components.hh  hashids.cc  jack-audio-module-widget.cc  jack-audio-module-widget.hh  jack-audio-module.cc  jack-audio-module.hh  jaq.cc  jaq.hh  skjack.cc  skjack.hh  sr-latch.hh
